argocd/minecraft/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minecraft
spec:
  endpointSelector:
    matchLabels:
      server: mc
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
    - fromCIDR:
        - 192.168.0.0/16
        - 10.10.8.0/22
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
